# rag_knowledge_base

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.wheels  README.MD  docker-compose.wheels.yml  docker-compose.yml  env.docker.example  pyproject.toml
.cursor/: config.json  hooks.json  marketing-context.example.md  marketing-context.md  marketing-sales-kit.md  mcp.figma.example.json  mcp.github.example.json
.cursor/agents/: debugger.md  designer.md  documenter.md  imager.md  marketing-researcher.md  marketing.md  planner.md  refactor.md  researcher.md  reviewer-senior.md  security-auditor.md  test-runner.md  worker.md
.cursor/commands/: create-issue.md  fix-issue.md  metrics-report.md  norissk.md  pr.md  review.md  update-deps.md  workflow-feature.md  workflow-implement.md  workflow-integrate-skill.md  workflow-scaffold.md
.cursor/docs/: CREATING_ASSETS.md  GITHUB_RESEARCH.md  MARKETING_SKILLS_UPSTREAM.md  PROJECT_RAG_MEMORY.md  (+1 more)
app/: .env.example  __init__.py  auth_dep.py  chat_service.py  chroma_cross_tenant.py  chroma_store.py  chroma_user_errors.py  config.py  db_sqlite.py  debug_dep.py  deps.py  ingest.py  llm.py  llm_types.py  main.py  passwords.py  rag_filters.py  rag_mount.py  rag_profile.py  rag_runtime.py  rag_scope.py  rag_test_service.py  registry_db.py  request_tenant.py  router_tenant_bind.py  tenancy.py
presentations/: DESIGN_TOKENS.md
scripts/: compose-up.ps1  docker-ensure-base-image.ps1  docker-load-base-image-from-cache.ps1  ensure-app-env.ps1  pip-install-editable.ps1  refresh-local-dist.ps1  refresh-wheels-in-linux-container.ps1
(+126 files in other folders)
